--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<h1>Git Intro</h1>
 	<p>Git is a version control system that takes snapshots called commits.</p>
 
-	<p>Git allows you to roll bac to previous commits</p>
+	<p>Git allows you to roll back to previous commits</p>
 
 </body>
 </html>
